tests/snapshots/all@-S_--owned_time.snap
---
source: tests/integration.rs
expression: code
---
// GENERATED CODE (ch2rs v0.1.8)
#![cfg_attr(rustfmt, rustfmt::skip)]
#![allow(warnings)]
#![allow(clippy::all)]

// Generated with the following options:
/*
ch2rs ch2rs_test -S --owned \
        --derive Clone \
        --derive PartialEq \
        --temporal time \
        -T 'FixedString(5)=[u8; 5]' \
        -T 'Decimal(18, 9)=u64' \
        -O 'blob=Vec<u8>' \
        -B 'blob' \
        -N 'str_sentinel' \
        -I 'ignored'
*/

#[derive(Debug, clickhouse::Row)]
#[derive(serde::Serialize)]
#[derive(Clone)]
#[derive(PartialEq)]
pub struct Row {
    /// this is a byte
    pub u8: u8,
    /// these are two bytes
    pub u16: u16,
    /// and these are four
    pub u32: u32,
    /// eight...
    pub u64: u64,
    /// come on!
    pub u128: u128,
    pub i8: i8,
    pub i16: i16,
    pub i32: i32,
    pub i64: i64,
    pub i128: i128,
    pub bool: bool,
    pub str: String,
    pub low_str: String,
    #[serde(with = "serde_bytes")]
    pub blob: Vec<u8>,
    pub fs: [u8; 5],
    pub f32: f32,
    pub f64: f64,
    #[serde(with = "::clickhouse::serde::time::date")]
    pub d: ::time::Date,
    #[serde(with = "::clickhouse::serde::time::date::option")]
    pub d_opt: Option<::time::Date>,
    #[serde(with = "::clickhouse::serde::time::date32")]
    pub d32: ::time::Date,
    #[serde(with = "::clickhouse::serde::time::date32::option")]
    pub d32_opt: Option<::time::Date>,
    #[serde(with = "::clickhouse::serde::time::datetime")]
    pub dt: ::time::OffsetDateTime,
    #[serde(with = "::clickhouse::serde::time::datetime::option")]
    pub dt_opt: Option<::time::OffsetDateTime>,
    #[serde(with = "::clickhouse::serde::time::datetime64::secs")]
    pub dt64_0: ::time::OffsetDateTime,
    #[serde(with = "::clickhouse::serde::time::datetime64::secs::option")]
    pub dt64_0_opt: Option<::time::OffsetDateTime>,
    #[serde(with = "::clickhouse::serde::time::datetime64::millis")]
    pub dt64_3: ::time::OffsetDateTime,
    #[serde(with = "::clickhouse::serde::time::datetime64::millis::option")]
    pub dt64_3_opt: Option<::time::OffsetDateTime>,
    #[serde(with = "::clickhouse::serde::time::datetime64::micros")]
    pub dt64_6: ::time::OffsetDateTime,
    #[serde(with = "::clickhouse::serde::time::datetime64::micros::option")]
    pub dt64_6_opt: Option<::time::OffsetDateTime>,
    #[serde(with = "::clickhouse::serde::time::datetime64::nanos")]
    pub dt64_9: ::time::OffsetDateTime,
    #[serde(with = "::clickhouse::serde::time::datetime64::nanos::option")]
    pub dt64_opt: Option<::time::OffsetDateTime>,
    #[serde(with = "::clickhouse::serde::time::time")]
    pub t: ::time::Duration,
    #[serde(with = "::clickhouse::serde::time::time::option")]
    pub t_opt: Option<::time::Duration>,
    #[serde(with = "::clickhouse::serde::time::time64::secs")]
    pub t64_0: ::time::Duration,
    #[serde(with = "::clickhouse::serde::time::time64::secs::option")]
    pub t64_0_opt: Option<::time::Duration>,
    #[serde(with = "::clickhouse::serde::time::time64::millis")]
    pub t64_3: ::time::Duration,
    #[serde(with = "::clickhouse::serde::time::time64::millis::option")]
    pub t64_3_opt: Option<::time::Duration>,
    #[serde(with = "::clickhouse::serde::time::time64::micros")]
    pub t64_6: ::time::Duration,
    #[serde(with = "::clickhouse::serde::time::time64::micros::option")]
    pub t64_6_opt: Option<::time::Duration>,
    #[serde(with = "::clickhouse::serde::time::time64::nanos")]
    pub t64_9: ::time::Duration,
    #[serde(with = "::clickhouse::serde::time::time64::nanos::option")]
    pub t64_9_opt: Option<::time::Duration>,
    #[serde(with = "::clickhouse::serde::ipv4")]
    pub ipv4: ::std::net::Ipv4Addr,
    #[serde(with = "::clickhouse::serde::ipv4::option")]
    pub ipv4_opt: Option<::std::net::Ipv4Addr>,
    pub ipv6: ::std::net::Ipv6Addr,
    #[serde(with = "::clickhouse::serde::uuid")]
    pub uuid: ::uuid::Uuid,
    #[serde(with = "::clickhouse::serde::uuid::option")]
    pub uuid_opt: Option<::uuid::Uuid>,
    pub dec64: u64,
    pub enum8: Enum8,
    pub enum16: Enum16,
    pub array: Vec<String>,
    pub tuple: (String, String, ),
    pub str_opt: Option<String>,
    pub map_str: Vec<(String, String, )>,
    pub map_f32: Vec<(String, f32, )>,
    #[serde(with = "sentinel_str_sentinel")]
    pub str_sentinel: Option<String>,
    pub default: u16,
    pub material: u16,
    pub alias: u16,
}

#[derive(Debug)]
#[derive(serde_repr::Serialize_repr)]
#[derive(Clone)]
#[derive(PartialEq)]
#[repr(i8)]
pub enum Enum8 {
    Empty = -128,
    FooBar = 0,
}

#[derive(Debug)]
#[derive(serde_repr::Serialize_repr)]
#[derive(Clone)]
#[derive(PartialEq)]
#[repr(i16)]
pub enum Enum16 {
    Empty = -128,
    FooBar = 1024,
}

mod sentinel_str_sentinel {
    use serde::{Deserializer, Serializer};

    pub fn deserialize<'de, D>(deserializer: D) -> Result<Option<String>, D::Error>
    where
        D: Deserializer<'de>,
    {
        let value = <String as serde::Deserialize>::deserialize(deserializer)?;
        if value == "" {
            Ok(None)
        } else {
            Ok(Some(value))
        }
    }

    pub fn serialize<S>(value: &Option<String>, serializer: S) -> Result<S::Ok, S::Error>
    where
        S: Serializer,
    {
        match value {
            Some(v) => serde::Serialize::serialize(v, serializer),
            None => serde::Serialize::serialize(&"", serializer),
        }
    }
}
